# isolationforest

./: CMakeLists.txt  README.md
main/: main.cc
python/: line.py  plane.py  test.py  vectors.py
src/: .clang-format  error.cc  error.h  ext_isolation_tree.cc  ext_isolation_tree.h  isolation_forest.cc  isolation_forest.h  isolation_tree.cc  isolation_tree.h  main.cc  node.cc  node.h  python_bindings.cc  test.cc  test.h  types.h
tests/: .BUILD.swp  ext_isolation_tree_test.cc  isolation_forest_test.cc  isolation_tree_test.cc  node_test.cc
